Cdn Ref products units. Fixed layout bugs with search list updated NMI, Ref prod, and active local changes updates

--- a/dev/src/forms_R1/app/styles/rep.css
+++ b/dev/src/forms_R1/app/styles/rep.css
@@ -96,6 +96,9 @@ label > select {
     padding-bottom: 0px;
     padding-left: 0px;
 }
+.rep-pad-top{
+    padding-top:5px;
+}
 
 /*.select2-choices {
     position: relative;
